--- a/package.json
+++ b/package.json
@@ -24,6 +24,6 @@
   },
   "homepage": "https://github.com/joshingmachine/prettier-config-joshingmachine#readme",
   "peerDependencies": {
-    "prettier": "~1.9.0"
+    "prettier": "1.11.1"
   }
 }
