--- a/package.json
+++ b/package.json
@@ -25,5 +25,12 @@
   "homepage": "https://github.com/joshingmachine/prettier-config-joshingmachine#readme",
   "peerDependencies": {
     "prettier": "1.11.1"
+  },
+  "devDependencies": {
+    "eslint": "4.18.2",
+    "eslint-config-joshingmachine": "0.5.0",
+    "eslint-config-prettier": "2.9.0",
+    "eslint-plugin-prettier": "2.6.0",
+    "prettier": "1.11.1"
   }
 }
