--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "A shareable version of my Prettier config file",
   "main": "prettier.config.js",
   "scripts": {
+    "lint": "eslint **/*.js",
+    "lint:fix": "eslint --fix **/*.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
