Update travis.yml with new branch name

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,4 @@ deploy:
     on:
         repo: joshingmachine/prettier-config-joshingmachine
         tags: true
-        branch: master
+        branch: main
